--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,80 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.87MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.69MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.90MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-3.20MB/s(Youtube:不良林), server: 143.110.145.33, port: 12315, type: vmess, uuid: 63297c39-3e69-4fd0-8632-da4c708f139f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.82MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.36MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-218.6KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-252.8KB/s(Youtube:不良林), server: hk6702.fans8.xyz, port: 443, type: trojan, password: cd4417a2-588c-485d-a796-ee6e090f8836, sni: hk6702.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.13MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.61MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-382.3KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.15MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-300.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇫🇷 法国-835.1KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 台湾-262.1KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-382.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-835.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-262.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-382.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-835.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-262.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-382.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-835.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-262.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-262.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-382.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-835.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-262.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-382.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-835.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-262.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-382.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-835.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-262.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-218.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-252.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-382.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-300.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-835.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-262.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
