--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,73 +5,81 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.98MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇯🇵 日本-1.88MB/s(Youtube:不良林), server: jgwdb3.gaox.ml, port: 443, type: trojan, password: 8d2d5953-d649-4034-94f2-72f2df2623da, sni: jgwdb3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-963.8KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
   - {name: 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇭🇰 香港-767.9KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇯🇵 日本-2.39MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
       - 🇨🇳 台湾-963.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-767.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
       - 🇨🇳 台湾-963.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-767.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
       - 🇨🇳 台湾-963.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-767.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
       - 🇨🇳 台湾-963.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-767.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
       - 🇨🇳 台湾-963.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-767.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
       - 🇨🇳 台湾-963.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-767.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
       - 🇨🇳 台湾-963.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-767.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -87,10 +95,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
       - 🇨🇳 台湾-963.8KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-767.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
