--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,79 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-671.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇦🇺 澳大利亚-1.90MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.54MB/s(Youtube:不良林), server: 173.82.226.27, port: 23662, type: vmess, uuid: efa2ab76-539d-4b6a-9572-24ba709fb81b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 173.82.226.27}}
   - {name: 🇺🇸 美国-3.87MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-423.1KB/s(Youtube:不良林), server: cdn1.myuuusss.com, port: 30041, type: ss, cipher: chacha20-ietf-poly1305, password: b195963c-2631-442d-ab3a-6e78df25d904}
   - {name: 🇺🇸 美国-2.85MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: f0de3134-aef4-45b5-a135-3a82321bbac6, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-671.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-11.45MB/s(Youtube:不良林), server: yp-cm-002.omo-m0m.com, port: 5703, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: yp-cm-002.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.59MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.05MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇺🇸 美国-325.9KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-2.11MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇩🇪 德国-1.19MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-671.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-671.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-325.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.11MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-671.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-671.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-325.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.11MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-671.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-671.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-325.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.11MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.11MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-671.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-671.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-325.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.11MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-671.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-671.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-325.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.11MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-671.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-671.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-325.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.11MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-671.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-671.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.59MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-325.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.11MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
